--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,146 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="buttonClicked"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/FirstRowButtonLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/one" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/two" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/three" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/SecondRowButtonLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/four" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/five" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/six" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/seven" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/eight" />
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/nine" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/emptyButton"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/empty" />
+
+        <Button
+            android:id="@+id/button0"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/zero" />
+
+        <Button
+            android:id="@+id/backspaceButton"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="0.333"
+            android:background="@drawable/circle_button"
+            android:textSize="30sp"
+            android:text="@string/backspace" />
+    </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
