--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,16 +179,16 @@
 
     <ImageView
         android:id="@+id/separatorImageView"
-        android:layout_width="2dp"
+        android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
+        android:background="#78d9ff"
         android:contentDescription="@string/image_view_content_description"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/darker_gray" />
+        app:layout_constraintTop_toBottomOf="@+id/switchImageView" />
 
     <ImageView
         android:id="@+id/country1FlagImageView"
@@ -215,7 +215,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Country 1"
         android:textColor="#0B7EB3"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/separatorImageView"
@@ -227,7 +226,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Country 2"
         android:textColor="#0B7EB3"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -239,10 +237,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:text="1"
         android:textColor="#000000"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/country1SelectionButton"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toStartOf="@+id/separatorImageView"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -251,10 +248,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:text="1"
         android:textColor="#000000"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/country1SelectionButton"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/separatorImageView" />
 
@@ -264,8 +260,8 @@
         android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:onClick="changeCountryButtonClicked"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/separatorImageView"
+        app:layout_constraintBottom_toBottomOf="@+id/country1NameTextView"
+        app:layout_constraintEnd_toStartOf="@+id/switchImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -275,10 +271,21 @@
         android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:onClick="changeCountryButtonClicked"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="@+id/country2NameTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/separatorImageView"
+        app:layout_constraintStart_toEndOf="@+id/switchImageView"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/switchImageView"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:onClick="countrySwitch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:color/transparent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -289,6 +296,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-
 
 </android.support.constraint.ConstraintLayout>
