--- a/app/src/main/res/layout/activity_country_selection_view.xml
+++ b/app/src/main/res/layout/activity_country_selection_view.xml
@@ -8,9 +8,14 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/country_list_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_country_list" />
 
     <ProgressBar
         android:id="@+id/progressBar"
