--- a/app/src/main/res/layout/item_country_list.xml
+++ b/app/src/main/res/layout/item_country_list.xml
@@ -33,7 +33,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/lemon"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/countryFlagImageView"
